tests/invalid/purity/impure_pred_t1.err_exp
impure_pred_t1.m:020: In call to impure predicate `impure_pred_t1.get_counter/2':
impure_pred_t1.m:020:   purity error: call must be preceded by `impure' indicator.
impure_pred_t1.m:012: In predicate `impure_pred_t1.main/2':
impure_pred_t1.m:012:   purity error: predicate is impure.
impure_pred_t1.m:012:   It must be declared `impure' or promised pure.
impure_pred_t1.m:021: In clause for `main(di, uo)':
impure_pred_t1.m:021:   mode error in unification of `Y' and `impure_pred_t1.foo(X)'.
impure_pred_t1.m:021:   Variable `Y' has instantiatedness `free',
impure_pred_t1.m:021:   term `impure_pred_t1.foo(X)'
impure_pred_t1.m:021:   has instantiatedness `impure_pred_t1.foo(free)'.
For more information, try recompiling with `-E'.
